(executables
 (names hip sleek)
 (libraries hipsleek)
 (preprocessor_deps xdebug.cppo)
 (modules hip sleek)
 (preprocess
  (action
   (run cppo -I . -D TRACE %{input-file}))))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(copy_files prelude_src/*)

(install
  (section (site (hipsleek preludes)))
  (files
    (api_prelude.ss as api/api_prelude.ss)))

(rule
 (alias hipsleek)
 (deps ./hip.exe ./sleek.exe ./prelude.ss ./prelude.slk)
 (action
  (echo "")))
