(library
 (name hipsleek_api)
 (public_name hipsleek.api)
 (libraries hipsleek dune-site)
 (inline_tests)
 (preprocess (pps ppx_expect)))

(install
  (section (site (hipsleek api_prelude)))
  (files
    (api_prelude.ss as api_prelude.ss)))

(generate_sites_module
  (module api_sites)
  (sites hipsleek))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
