(library
 (name hipsleek_api)
 (public_name hipsleek.api)
 (libraries hipsleek dune-site ppx_deriving)
 (inline_tests (deps (package hipsleek)))
 (preprocess (pps ppx_expect ppx_deriving.show)))

(generate_sites_module
  (module hipsleek_sites)
  (sites hipsleek))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
