## $Id: Makefile.am,v 1.2 2009-02-17 08:55:21 chinwn Exp $

AM_YFLAGS = -d
bin_PROGRAMS = muh
muh_SOURCES = ascii.c channels.c commands.c dcc.c dlink.c ignore.c irc.c log.c match.c muh.c perm.c table.c tools.c parser.y lexer.l common.c
muh_SOURCES += ascii.h channels.h commands.h dcc.h dlink.h ignore.h irc.h log.h match.h messages.h muh.h perm.h table.h tools.h parser.h common.h
